# anagram-midi-control

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
src/: AnagramControlPlugin.cpp  AnagramControlUI.cpp  DistrhoPluginInfo.h
